# CPPTesting

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  calculator.cpp  main.cpp
tests/: CMakeLists.txt  calculator_test.cpp
